<resources>
    <string name="app_name">BookApp</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forogt_password">Forogt password?</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="user_books">Now reading</string>
    <string name="main_page">Main page</string>
    <string name="add_book">Add Book</string>
    <string name="find_book">Find book</string>
    <string name="scan_ean">Scan EAN</string>
    <string name="book_name">Title</string>
    <string name="book_author">Author</string>
    <string name="book_pages">Number of pages</string>
    <string name="ean">EAN (optional)</string>
    <string name="fields_req">All fields required!</string>
    <string name="bad_login">Wrong username or password!</string>
    <string name="good_login">Login success</string>
    <string name="please_login">Please login</string>
    <string name="good_register">Register success</string>
    <string name="user_exists">This username is already  taken</string>
    <string name="book_added">Book has been added and assigned to your account</string>
    <string name="book_exists">Book already added. Go find it!</string>
    <string name="db_connection_err">Error: Database connection</string>
    <string name="register_err">Register failed</string>
    <string name="book_added_not_assigned">Book has been added, but not assigned</string>
    <string name="book_add_err">Book has not been added!</string>
    <string name="system">System</string>
    <string name="bookcase">Bookcase</string>
    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="pages">Pages:</string>
    <string name="user_page">Your page:</string>
    <string name="data_load_err">Database error!</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="page_updated">Page updated</string>
    <string name="page_updated_err">Error while updating page!</string>
    <string name="no_user_books">You don\'t read any books!</string>
    <string name="assign">Assign Book</string>
    <string name="book_assigned">The first time you read this book!</string>
    <string name="book_assigned_err">Book assigned failed!</string>
    <string name="email_exists">This email is already taken</string>
    <string name="pass_lenght">The password must be at least 6 characters long</string>
    <string name="email_valid">Enter a valid email address</string>
    <string name="password_reset">Password Reset</string>
    <string name="password_reset_description">Please enter the email address of the account to which you want to reset the password</string>
    <string name="send">Send</string>
    <string name="email_sent">Email with password reset link has been sent</string>
    <string name="email_not_exist">The account with the specified email address does not exist</string>
    <string name="publisher">Publisher</string>
    <string name="year">Year of publication</string>
    <string name="pages_validate">Number of pages and year of publication have to be a number</string>
    <string name="page_question">On which page are you?</string>
    <string name="actual_page_err">The last page read must be smaller than all the pages of the book!</string>
    <string name="readed">Readed</string>
    <string name="rate">Rate</string>
    <string name="rate_book">Rate Book</string>
    <string name="rate_book_validate">The book rating must be greater than 0!</string>
    <string name="readed_row">Readed:</string>
    <string name="amount">times</string>
    <string name="user_rate">Your rate</string>
    <string name="readed_book_alert">Do you want to read or rate that book again?</string>
    <string name="read_again">Read</string>
    <string name="rate_again">Change rate</string>
    <string name="reading_again">You are reading this book one more time</string>
    <string name="already_reading">You are just now reading this book</string>
    <string name="pet">Pet</string>
    <string name="user_settings">User settings</string>
    <string name="change_username">Change username</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="change_username_description">Please enter your new username and password</string>
    <string name="change">Change</string>
    <string name="username_changed">Username successfully changed</string>
    <string name="change_email_description">Please enter your new email and password</string>
    <string name="email_changed">Email successfully changed</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="change_password_description">Please enter your new password and old password</string>
    <string name="password_changed">Password successfully changed</string>
    <string name="no_readed_books">You haven\'t read any books yet!</string>
    <string name="all_books_reading">You are reading all the books from our base!</string>
    <string name="actual_page_0">The current page cannot be 0!</string>
    <string name="rate_noun">Rate</string>
    <string name="no_rate">No ratings!</string>
    <string name="assign_book_alert">Would you like to read this book?</string>
    <string name="your_level">Your level:</string>
    <string name="you_readed">You have already read:</string>
    <string name="books">books</string>
    <string name="level_req_1">book to next level</string>
    <string name="max_level">Maximum level</string>
    <string name="set_notify_time">Time of notification</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_description">Channel for sending reminders</string>
    <string name="set">Set</string>
    <string name="notify_time_info">The notification will come at</string>
    <string name="lion_description">Daro the Lion as King would love to reign in your library</string>
    <string name="dog_description">Dog Simon is a faithful companion who will keep you company while you read</string>
    <string name="cat_description">Maciek the cat is a cutie who likes it when someone scratches his back while reading</string>
    <string name="piggy_description">Piggy Patrick prefers only a good book (preferably with you) to his delicious snacks</string>
    <string name="shark_description">Shark Alexander is a gentle predator, the only thing he devours is a few dozen pages before bedtime</string>
    <string name="cow_description">Laura the cow, despite her chronic mooing, can focus on the plot of any book</string>
    <string name="sloth_description">Konrad the Sloth\'s favorite thing surprisingly is not sleeping, but lazing around with a book</string>
    <string name="fox_description">Radek the Fox is a little prankster, so you\'d better keep an eye on your books, because he might hide them</string>
    <string name="turtle_description">Turtle Iga may be slow moving, but no one reads books faster than she does</string>
    <string name="crocodile_description">Crocodile Claudius, despite his crocodile duties, will always find time to read with you</string>
    <string name="level_req">Required level</string>
    <string name="choose_pet">Do you want this pet to be your companion?</string>
    <string name="choose">Choose</string>
    <string name="level_too_low">Your level is too low!</string>
    <string name="lion_chosen">From now on Daro the Lion is your pet!</string>
    <string name="cat_chosen">From now on Maciek the Cat is your pet!</string>
    <string name="dog_chosen">From now on, Simon the Dog is your pet!</string>
    <string name="piggy_chosen">From now on, Patrick the Pig is your pet!</string>
    <string name="shark_chosen">From now on, Alexander the Shark is your pet!</string>
    <string name="cow_chosen">From now on, Laura the Cow is your pet!</string>
    <string name="sloth_chosen">From now on, Konrad the Sloth is your pet!</string>
    <string name="fox_chosen">From now on, Radek the Fox is your pet!</string>
    <string name="turtle_chosen">From now on, Iga the Turtle is your pet!</string>
    <string name="crocodile_chosen">From now on, Crocodile Claudius is your pet!</string>
    <string name="lion_click">Whoaa!!! Stop poking me because I\'m reading!</string>
    <string name="dog_click">How do you feel today? How much did you read today? Shall we play later?</string>
    <string name="cat_click">What is about? I have already read mine today, let me take a nap....</string>
    <string name="piggy_click">Ey, be a little careful when reading! By the way, do you have any snacks with you?</string>
    <string name="shark_click">Howdy! Glad to see you here! Stay a while and read something with me!</string>
    <string name="cow_click">Moo! Oh sorry... Moo! My chronic mooing... Moo! Gives me a hard time... Moo!</string>
    <string name="sloth_click">What?! Oo it\'s you.... Thanks for waking me up, because it\'s high time to read something!</string>
    <string name="fox_click">Aaah, what is you! Damn! I almost managed to hide your books!</string>
    <string name="turtle_click">Hello friend. I just finished reading a 1000-page book about pizza and a craving for it came over me. Would you like a slice?</string>
    <string name="crocodile_click">O! Sorry, I think I ran into you. I just found a super book and am going to read it. You look for it too!</string>
    <string name="lion_notify"> Whoa! It\'s me Daro the Lion! Remember to read today!</string>
    <string name="dog_notify">Hey it\'s me Simon! Come play with me and then read!</string>
    <string name="cat_notify">It\'s me Maciek! I just got up to remind you to read today! Well, I\'m going back to sleep....</string>
    <string name="piggy_notify">Hey it is me Patrick! Listen, leave the food for me, and you go read!</string>
    <string name="shark_notify">Howdy, Alexander here! Listen, take a short break and grab a book!</string>
    <string name="cow_notify">Moo! It\'s me Laura... Moo! Sorry for mooing, but... Moo! Please read today!</string>
    <string name="sloth_notify">Hey here Konrad the Sloth! I hold a place for you to laze around with a book.</string>
    <string name="fox_notify">Hey! Radek here, remember to keep a good eye on your books!</string>
    <string name="turtle_notify">Hello, it\'s me Turtle Iga. Let\'s go reading together! If you want, I can read slower so that you can keep up!</string>
    <string name="crocodile_notify">Hello! Claudius Crocodile here. Let\'s read together, then our knowledge will increase!</string>
    <string name="set_notify_time_description">Select the time at which you want to receive the reminder</string>
    <string name="amount_one">time</string>
    <string name="books_below_5">books</string>
    <string name="books_one">book</string>
    <string name="level_req_2">books to next level</string>
    <string name="level_req_3">books to next level</string>
    <string name="title_or_author">Title or Author</string>
    <string name="no_conncetion">No internet connection</string>
    <string name="no_conncection_description">This app requires internet connection to function properly. Please connect to the internet and try again.</string>
    <string name="no_books_found">No books found</string>

</resources>