<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/bookcase">
        <menu>
            <group android:checkableBehavior="single">

                <item android:id="@+id/main"
                    android:icon="@drawable/ic_baseline_home_24"
                    android:title="@string/main_page" />

                <item android:id="@+id/user_books"
                    android:icon="@drawable/ic_baseline_menu_book_24"
                    android:title="@string/user_books" />

                <item android:id="@+id/readed_books"
                    android:icon="@drawable/ic_baseline_done_outline_24"
                    android:title="Przeczytane" />

                <item android:id="@+id/add_book"
                    android:icon="@drawable/ic_baseline_add_24"
                    android:title="@string/add_book" />

                <item android:id="@+id/find_book"
                    android:icon="@drawable/ic_baseline_search_24"
                    android:title="@string/find_book" />

            </group>
        </menu>
    </item>


    <item android:title="@string/system">
        <menu>
            <group>
                <item android:id="@+id/logout"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:title="@string/logout"
                    />
            </group>
        </menu>
    </item>


</menu>