<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBook">

    <TextView
        android:id="@+id/add_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/add_book"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_book"
        android:background="#30ffffff"
        android:hint="@string/book_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_book_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_name"
        android:background="#30ffffff"
        android:hint="@string/book_author"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:id="@+id/book_pages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_author"
        android:background="#30ffffff"
        android:hint="@string/book_pages"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_format_list_numbered_24"
        android:drawablePadding="20dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_pages"
        android:background="#30ffffff"
        android:hint="@string/publisher"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_public_24"
        android:drawablePadding="20dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/publisher"
        android:background="#30ffffff"
        android:hint="@string/year"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_calendar_month_24"
        android:drawablePadding="20dp"
        android:inputType="text"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addBookbtn"
        android:layout_below="@+id/year"
        android:text="@string/add_book"
        android:backgroundTint="#AAAA"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

</RelativeLayout>
</ScrollView>